Updated onboarding flow
